<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SplashScreenActivity">

    <ImageView
        android:id="@+id/background_onboard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_purple"
        android:contentDescription="@string/background_image"
        android:src="@drawable/ic_background"
        tools:ignore="ImageContrastCheck"
        tools:layout_editor_absoluteX="-192dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/tv_logo_github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo_github"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/background_onboard"
        app:layout_constraintStart_toStartOf="@+id/background_onboard"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo_github" />

    <TextView
        android:id="@+id/tv_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#80000000"
        android:text="@string/copyrigth"
        android:fontFamily="@font/poppins_light"
        android:textColor="@color/white_20"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/background_onboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_logo_github"
        app:layout_constraintVertical_bias="0.771"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>