<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.OnBoardingActivity">

    <ImageView
        android:id="@+id/background_onboard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_purple"
        android:contentDescription="@string/background_image"
        android:src="@drawable/ic_background_onboard"
        tools:ignore="ImageContrastCheck"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="71dp"
        android:text="@string/text_welcome"
        android:textSize="32sp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/text_github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_text_github"
        android:contentDescription="text_github" />

    <ImageView
        android:id="@+id/tv_logo_github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/background_onboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/background_onboard"
        app:layout_constraintTop_toBottomOf="@+id/text_github"
        app:layout_constraintVertical_bias="0.221"
        app:srcCompat="@drawable/ic_logo_github" />

    <TextView
        android:id="@+id/tv_text_explore_github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explore_user_on_github"
        android:textSize="22sp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/background_onboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_logo_github"
        app:layout_constraintVertical_bias="0.298" />

    <TextView
        android:id="@+id/tv_detail_onboard"
        android:layout_width="280dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:text="@string/detail_explore"
        android:textAlignment="center"
        android:textColor="@color/white_20"
        android:textSize="13sp"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_text_explore_github"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_started"
        android:layout_width="220dp"
        android:layout_height="50.54dp"
        android:background="@android:color/transparent"
        android:bufferType="normal"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/get_started_now"
        android:textAllCaps="false"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_onboard"
        app:layout_constraintVertical_bias="0.103" />

</androidx.constraintlayout.widget.ConstraintLayout>